--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 
 <!-- background begings here -->
 
+<!-- lalalalal -->
 <div id= "mainimage">
     <div class= "container">
         <div class="row">
