--- a/public/index.html
+++ b/public/index.html
@@ -74,58 +74,46 @@
 </div>
 
             <!-- category selection begins here -->
-            <div class="row martop">
-                <div class="col-md-4 genre-button" data-genre="Basketball">
+            <div class="row martop2">
+                <div class="col-md-4" data-genre="Basketball">
                     <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
+                    <a href="search.html" class="btn btn-warning" role="button" aria-pressed="true">Primary link</a>
                     <div class="middle">
                     </div>
                 </div>
-                <div class="col-md-4 genre-button" data-genre="Basketball">
+                <div class="col-md-4" data-genre="Basketball">
                     <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
+                    <a href="search.html" class="btn btn-warning" role="button" aria-pressed="true">Primary link</a>
                     <div class="middle">
                     </div>
                 </div>
-                <div class="col-md-4 genre-button" data-genre="Basketball">
+                <div class="col-md-4" data-genre="Basketball">
                     <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
-                    <div class="middle">
-                    </div>
-                </div>
-            </div>
-            <div class="row martop">
-                <div class="col-md-4 genre-button" data-genre="Basketball">
-                    <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
-                    <div class="middle">
-                    </div>
-                </div>
-                <div class="col-md-4 genre-button" data-genre="Basketball">
-                    <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
-                    <div class="middle">
-                    </div>
-                </div>
-                <div class="col-md-4 genre-button" data-genre="Basketball">
-                    <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
+                    <a href="search.html" class="btn btn-warning" role="button" aria-pressed="true">Primary link</a>
                     <div class="middle">
                     </div>
                 </div>
             </div>
-
-            <!--this is where background overlay begins  -->
-            <!-- <div class="card bg-dark text-white">
-    <img src="assets/background/back.png" class="card-img" alt="...">
-    <div class="card-img-overlay">
-       <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text">Last updated 3 mins ago</p> -->
-            <!-- </div>   
-</div>     -->
-
-    <!-- where new type dive begins -->
-    <!-- <div class="container">
-    <div class="jumbotron">
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis dolor, voluptatem odio alias libero impedit voluptatibus nam voluptas ad. Cupiditate aut sapiente exercitationem provident, et fugiat. Distinctio quo blanditiis eos?</h1>
-      <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem neque eaque possimus animi molestias hic amet fugit totam cumque blanditiis reiciendis, iure quos quod labore quisquam obcaecati cum optio soluta?</h3>
-    </div>
-   </div> -->
+            <div class="row martop">
+                <div class="col-md-4" data-genre="Basketball">
+                    <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
+                    <a href="search.html" class="btn btn-warning" role="button" aria-pressed="true">Primary link</a>
+                    <div class="middle">
+                    </div>
+                </div>
+                <div class="col-md-4" data-genre="Basketball">
+                    <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
+                    <a href="search.html" class="btn btn-warning" role="button" aria-pressed="true">Primary link</a>
+                    <div class="middle">
+                    </div>
+                </div>
+                <div class="col-md-4" data-genre="Basketball">
+                    <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
+                    <a href="search.html" class="btn btn-warning" role="button" aria-pressed="true">Primary link</a>
+                    <div class="middle">
+                    </div>
+                </div>
+            </div>
 
 
     <!-- Optional JavaScript; choose one of the two! -->
