--- a/public/product.html
+++ b/public/product.html
@@ -6,12 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/product.css">
+
+    <title>Product</title>
+
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+    <div class="container">
+
+      <div class="main-content">
+        <!-- Shoe Name -->
+        <h2 class="row" id="name">Yeezy Boost 350 V2 Semi Frozen Yellow</h2>
+
+        <div class="row">
+          <!-- The main shoe image -->
+            <div class="col-6">
+              <img src="assets/products/shanni-test.jpg" alt="boots">
+              
+            </div>
+
+          <!-- Shoe information -->
+          <div class="col-1"></div>
+            <div class="col-4 shoe-info">
+              <div id="brand">Adidas</div>
+              <div id="date">12/05/2020</div>
+              <div id="price">$346-$376</div>
+              <div id="collab">Kanye West</div>
+              <div id="size">US Men's 4-17</div>
+            </div>
+          <div class="col-1"></div>
+        </div>
+        <div class="row">
+          <div class="col-12" id="desc">Known for their iconic collabs - once again Kanye West and adidas brewed up more sneaker collection heat with the adidas Yeezy Boost 350 Black Red. Showing Pirate Black flashes these come with a core black upper and sole that has a core red SPLY-350 branding on both sides. These released in November 2016 and retailed at $220.</div>
+        </div>
+
+      </div>
+
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
