--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,17 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,200;1,400;1,600;1,800&display=swap" rel="stylesheet"> -->
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
 
 <body>
-    <!-- background image begins here -->
+
+<!-- background image begins here -->
     <div id="mainimage">
         <div class="container">
             <div class="row">
@@ -24,18 +26,18 @@
                 <div class="col-md-4"><img src="assets/logo/logov7.png" class="img-fluid" alt="Responsive image"></div>
                 <div class="col-md-4"></div>
             </div>
-   <!-- this is where the search bar begins  -->
+<!-- this is where the search bar begins  -->
 
    <div class="row marsearch">
     <div id="center">
-        <form class="form-inline my-2 my-lg-0 mr-auto">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"
+        <form class="form-inline my-2 mr-auto">
+            <input class="form-control" type="search" placeholder="Search" aria-label="SEARCH"
                 id="search-input">
         </form>
     </div>
 </div>
 
-            <!-- this is where Carousel begins -->
+<!-- this is where Carousel begins -->
         </div>
         <div class="row martop">
             <div class="col-md-12">
@@ -53,7 +55,7 @@
                             <img src="assets/carousel/2c copy.png" class="d-block w-10" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/carousel/3c.png" class="d-block w-10" alt="...">
+                            <img src="assets/carousel/3c copy.png" class="d-block w-10" alt="...">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
@@ -70,46 +72,46 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container" style="margin-bottom: 40em;">
 </div>
 
-            <!-- category selection begins here -->
-            <div class="row martop2">
+<!-- category selection begins here -->
+            <div class="row martop">
                 <div class="col-md-4" data-genre="Basketball">
-                    <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
-                    <a href="search.html" class="btn btn-warning" role="button" aria-pressed="true">Primary link</a>
+                    <img src="assets/products/basketball.png" alt="Avatar" class="image" style="width:100%">
+                    <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
                     <div class="middle">
                     </div>
                 </div>
-                <div class="col-md-4" data-genre="Basketball">
-                    <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
-                    <a href="search.html" class="btn btn-warning" role="button" aria-pressed="true">Primary link</a>
+                <div class="col-md-4" data-genre="Training">
+                    <img src="assets/products/training.png" alt="Avatar" class="image" style="width:100%">
+                    <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
                     <div class="middle">
                     </div>
                 </div>
-                <div class="col-md-4" data-genre="Basketball">
-                    <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
-                    <a href="search.html" class="btn btn-warning" role="button" aria-pressed="true">Primary link</a>
+                <div class="col-md-4" data-genre="Formal">
+                    <img src="assets/products/formal.png" alt="Avatar" class="image" style="width:100%">
+                    <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
                     <div class="middle">
                     </div>
                 </div>
             </div>
             <div class="row martop">
-                <div class="col-md-4" data-genre="Basketball">
-                    <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
-                    <a href="search.html" class="btn btn-warning" role="button" aria-pressed="true">Primary link</a>
+                <div class="col-md-4" data-genre="Casual">
+                    <img src="assets/products/casual.png" alt="Avatar" class="image" style="width:100%">
+                    <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
                     <div class="middle">
                     </div>
                 </div>
-                <div class="col-md-4" data-genre="Basketball">
-                    <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
-                    <a href="search.html" class="btn btn-warning" role="button" aria-pressed="true">Primary link</a>
+                <div class="col-md-4" data-genre="Boots">
+                    <img src="assets/products/boots copy.png" alt="Avatar" class="image" style="width:100%">
+                    <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
                     <div class="middle">
                     </div>
                 </div>
-                <div class="col-md-4" data-genre="Basketball">
-                    <img src="assets/products/boots.png" alt="Avatar" class="image" style="width:100%">
-                    <a href="search.html" class="btn btn-warning" role="button" aria-pressed="true">Primary link</a>
+                <div class="col-md-4" data-genre="Running">
+                    <img src="assets/products/runining.png" alt="Avatar" class="image" style="width:100%">
+                    <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
                     <div class="middle">
                     </div>
                 </div>
