--- a/public/index.html
+++ b/public/index.html
@@ -9,126 +9,135 @@
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,200;1,400;1,600;1,800&display=swap" rel="stylesheet"> -->
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    
+
 </head>
 
 <body>
 
-<!-- background image begins here -->
+    <!-- background image begins here -->
     <div id="mainimage">
         <div class="container">
             <div class="row">
                 <div class="col-md-4"></div>
-                
+
                 <!-- Logo begins here -->
                 <div class="col-md-4"><img src="assets/logo/logov7.png" class="img-fluid" alt="Responsive image"></div>
                 <div class="col-md-4"></div>
             </div>
-<!-- this is where the search bar begins  -->
 
-   <div class="row marsearch">
-    <div id="center">
-        <form class="form-inline my-2 mr-auto">
-            <input class="form-control" type="search" placeholder="Search" aria-label="SEARCH"
-                id="search-input">
-        </form>
-    </div>
-</div>
+            <!-- this is where the search bar begins  -->
 
-<!-- this is where Carousel begins -->
+            <div class="row marsearch">
+                <div id="center">
+                    <form class="form-inline my-2 mr-auto">
+                        <input class="form-control" type="search" placeholder="Search" aria-label="SEARCH"
+                            id="search-input">
+                    </form>
+                </div>
+            </div>
+
+            <!-- this is where Carousel begins -->
+
+            <div class="row martop">
+                <div class="col-md-12">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="assets/carousel/1c copy.png" class="d-block w-10" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/carousel/2c copy.png" class="d-block w-10" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/carousel/3c copy.png" class="d-block w-10" alt="...">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+                            data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                            data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container" style="margin-bottom: 40em;">
+        </div>
+
+
+        <!-- this is where browse copy begins -->
+        <div class="col-md-4">
+            <h1> BROWSE BY STYLE</h1>
+        </div>
+
+
+        <!-- category selection begins here -->
+        <div class="row martop">
+            <div class="col-md-4" data-genre="Basketball">
+                <img src="assets/products/basketball.png" alt="Avatar" class="image" style="width:100%">
+                <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
+                <div class="middle">
+                </div>
+            </div>
+            <div class="col-md-4" data-genre="Training">
+                <img src="assets/products/training.png" alt="Avatar" class="image" style="width:100%">
+                <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
+                <div class="middle">
+                </div>
+            </div>
+            <div class="col-md-4" data-genre="Formal">
+                <img src="assets/products/formal.png" alt="Avatar" class="image" style="width:100%">
+                <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
+                <div class="middle">
+                </div>
+            </div>
         </div>
         <div class="row martop">
-            <div class="col-md-12">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="assets/carousel/1c copy.png" class="d-block w-10" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/carousel/2c copy.png" class="d-block w-10" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/carousel/3c copy.png" class="d-block w-10" alt="...">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
-                        data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
-                        data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+            <div class="col-md-4" data-genre="Casual">
+                <img src="assets/products/casual.png" alt="Avatar" class="image" style="width:100%">
+                <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
+                <div class="middle">
+                </div>
+            </div>
+            <div class="col-md-4" data-genre="Boots">
+                <img src="assets/products/boots copy.png" alt="Avatar" class="image" style="width:100%">
+                <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
+                <div class="middle">
+                </div>
+            </div>
+            <div class="col-md-4" data-genre="Running">
+                <img src="assets/products/runining.png" alt="Avatar" class="image" style="width:100%">
+                <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
+                <div class="middle">
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container" style="margin-bottom: 40em;">
-</div>
-
-<!-- category selection begins here -->
-            <div class="row martop">
-                <div class="col-md-4" data-genre="Basketball">
-                    <img src="assets/products/basketball.png" alt="Avatar" class="image" style="width:100%">
-                    <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
-                    <div class="middle">
-                    </div>
-                </div>
-                <div class="col-md-4" data-genre="Training">
-                    <img src="assets/products/training.png" alt="Avatar" class="image" style="width:100%">
-                    <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
-                    <div class="middle">
-                    </div>
-                </div>
-                <div class="col-md-4" data-genre="Formal">
-                    <img src="assets/products/formal.png" alt="Avatar" class="image" style="width:100%">
-                    <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
-                    <div class="middle">
-                    </div>
-                </div>
-            </div>
-            <div class="row martop">
-                <div class="col-md-4" data-genre="Casual">
-                    <img src="assets/products/casual.png" alt="Avatar" class="image" style="width:100%">
-                    <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
-                    <div class="middle">
-                    </div>
-                </div>
-                <div class="col-md-4" data-genre="Boots">
-                    <img src="assets/products/boots copy.png" alt="Avatar" class="image" style="width:100%">
-                    <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
-                    <div class="middle">
-                    </div>
-                </div>
-                <div class="col-md-4" data-genre="Running">
-                    <img src="assets/products/runining.png" alt="Avatar" class="image" style="width:100%">
-                    <a href="search.html" class="btn" role="button" aria-pressed="true">Primary link</a>
-                    <div class="middle">
-                    </div>
-                </div>
-            </div>
 
 
-    <!-- Optional JavaScript; choose one of the two! -->
+        <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
+        <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+            crossorigin="anonymous"></script>
 
-    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
+        <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
