--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a7b1c78f86.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -31,9 +32,10 @@
             <!-- Search Bar  -->
             <div class="row">
                 <div class="col-12 mar-center">
-                        <input class="form-control" type="search" placeholder="SEARCH" id="search-input">
+                    <input class="form-control" type="search" placeholder="&#xf002; SEARCH" id="search-input">
                 </div>
             </div>
+
         </div>
             <!-- Carousel -->
             <div class="row carousel-margin">
@@ -79,49 +81,50 @@
             <div class="row">
                 <div class="col-4">
                     <img src="assets/products/basketball.png" alt="Basketball Shoes" class="image">
-                    <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">BASKETBALL</a>
+                    <div class="text-center">
+                        <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">BASKETBALL</a>
+                    </div>    
                 </div>
                 <div class="col-4">
                     <img src="assets/products/training.png" alt="Sneakers" class="image">
-                    <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">TRAINING</a>
+                    <div class="text-center">
+                        <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">TRAINING</a>
+                    </div>    
                 </div>
                 <div class="col-4">
                     <img src="assets/products/formal.png" alt="Lounge Shoes" class="image">
-                    <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">LOUNGE</a>                   
+                    <div class="text-center">
+                        <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">LOUNGE</a>                   
+                    </div>    
                 </div>
             </div>
-            <div class="row">
+            <div class="row bottom-browse-by-style-div">
                 <div class="col-4">
                     <img src="assets/products/casual.png" alt="Casual Sneakers" class="image">
-                    <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">CASUAL</a>   
+                    <div class="text-center">
+                        <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">CASUAL</a>   
+                    </div>    
                 </div>
                 <div class="col-4">
                     <img src="assets/products/boots copy.png" alt="Boots" class="image">
-                    <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">BOOTS</a>       
+                    <div class="text-center">
+                        <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">BOOTS</a>       
+                    </div>    
                 </div>
-                <!-- change data-genre from running to all... we dont have a running category but we do need an all -->
                 <div class="col-4">
                     <img src="assets/products/runining.png" alt="Limited Edition Sneakers" class="image">
-                    <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">VIEW ALL</a>    
+                    <div class="text-center">
+                        <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">VIEW ALL</a>    
+                    </div>    
                 </div>
             </div>
 
         </div>
-        <!-- Optional JavaScript; choose one of the two! -->
 
-        <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-            crossorigin="anonymous"></script>
-
-        <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    -->
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
