--- a/public/index.html
+++ b/public/index.html
@@ -80,19 +80,19 @@
             <!-- category selection begins here -->
             <div class="row">
                 <div class="col-4">
-                    <img src="assets/products/basketball.png" alt="Basketball Shoes" class="image">
+                    <img src="assets/products/new/basketballN.png" alt="Basketball Shoes" class="image">
                     <div class="text-center">
                         <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">BASKETBALL</a>
                     </div>    
                 </div>
                 <div class="col-4">
-                    <img src="assets/products/training.png" alt="Sneakers" class="image">
+                    <img src="assets/products/new/training.png" alt="Sneakers" class="image">
                     <div class="text-center">
                         <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">TRAINING</a>
                     </div>    
                 </div>
                 <div class="col-4">
-                    <img src="assets/products/formal.png" alt="Lounge Shoes" class="image">
+                    <img src="assets/products/new/loungeN.png" alt="Lounge Shoes" class="image">
                     <div class="text-center">
                         <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">LOUNGE</a>                   
                     </div>    
@@ -100,19 +100,19 @@
             </div>
             <div class="row bottom-browse-by-style-div">
                 <div class="col-4">
-                    <img src="assets/products/casual.png" alt="Casual Sneakers" class="image">
+                    <img src="assets/products/new/casualN.png" alt="Casual Sneakers" class="image">
                     <div class="text-center">
                         <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">CASUAL</a>   
                     </div>    
                 </div>
                 <div class="col-4">
-                    <img src="assets/products/boots copy.png" alt="Boots" class="image">
+                    <img src="assets/products/new/altN.png" alt="Boots" class="image">
                     <div class="text-center">
                         <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">BOOTS</a>       
                     </div>    
                 </div>
                 <div class="col-4">
-                    <img src="assets/products/runining.png" alt="Limited Edition Sneakers" class="image">
+                    <img src="assets/products/new/runing.png" alt="Limited Edition Sneakers" class="image">
                     <div class="text-center">
                         <a href="search.html" class="btn shoe-style-btn" role="button" aria-pressed="true">VIEW ALL</a>    
                     </div>    
