slowly making progress on search

--- a/public/search.html
+++ b/public/search.html
@@ -29,11 +29,11 @@
 
             <div class="collapse drop" id="sex">
               <span class="checkmark">
-                <input type="checkbox" value="w" name="women">
+                <input type="checkbox" value="w" name="gender">
                 <label class="container">WOMEN</label>
               </span>       
               <span class="checkmark">
-                <input type="checkbox" value="m" name="men"> 
+                <input type="checkbox" value="m" name="gender"> 
                 <label class="container">MEN</label>
               </span> 
             </div>
@@ -173,7 +173,6 @@
                   <div class="collapse drop" id="EU">
                     <span class="checkmark">
                       <input type="checkbox" value="34" name="eu-size">
-
                       <label class="container">34</label>
                     </span>
                     <span class="checkmark">
