changed #sex --> #gender

--- a/public/search.html
+++ b/public/search.html
@@ -30,12 +30,10 @@
             <input class="form-control mr-sm-2" id="search-bar" type="search" placeholder="SEARCH" aria-label="Search">
           </form>
 
-       
-
         <form action="" id="filter-form">
 
            <!-- FILTER FOR SEX-->
-           <p class="filter" id="sex" data-toggle="collapse" data-target="#sex" aria-expanded="false" aria-controls="collapseExample">
+           <p class="filter" id="sex" data-toggle="collapse" data-target="#gender" aria-expanded="false" aria-controls="collapseExample">
             GENDER
             <img src="./assets/icons/2931155 - add attach create maximize new plus.png" class="expand">
           </p>
